--- a/package.json
+++ b/package.json
@@ -13,27 +13,29 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "5.5.4",
+    "@nuxtjs/auth": "^4.8.4",
+    "@nuxtjs/recaptcha": "^0.5.3",
+    "@nuxtjs/axios": "5.6.0",
     "@nuxtjs/pwa": "2.6.0",
     "@nuxtjs/toast": "3.2.1",
-    "nuxt": "2.8.1",
-    "@nuxtjs/vuetify": "^1.2.1"
+    "nuxt": "2.9.2",
+    "@nuxtjs/vuetify": "^1.8.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.1.2",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "babel-eslint": "^10.0.2",
-    "eslint": "^6.1.0",
-    "eslint-config-standard": ">=13.0.1",
+    "@nuxtjs/eslint-module": "^1.1.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.4.0",
+    "eslint-config-standard": ">=14.1.0",
     "eslint-plugin-import": ">=2.18.2",
-    "eslint-plugin-jest": ">=22.15.0",
-    "eslint-plugin-node": ">=9.1.0",
+    "eslint-plugin-jest": ">=22.17.0",
+    "eslint-plugin-node": ">=10.0.0",
     "eslint-plugin-nuxt": ">=0.4.3",
     "eslint-plugin-promise": ">=4.2.1",
-    "eslint-plugin-standard": ">=4.0.0",
+    "eslint-plugin-standard": ">=4.0.1",
     "eslint-plugin-vue": "^5.2.3",
-    "nodemon": "^1.19.1",
-    "stylus": "^0.54.5",
+    "nodemon": "^1.19.2",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2"
   }
 }
