--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@nuxtjs/recaptcha": "^0.5.3",
     "@nuxtjs/axios": "5.6.0",
     "@nuxtjs/pwa": "2.6.0",
-    "@nuxtjs/toast": "3.2.1",
-    "nuxt": "2.9.2",
-    "@nuxtjs/vuetify": "^1.8.3"
+    "@nuxtjs/toast": "3.3.0",
+    "nuxt": "2.10.2"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.9.0",
     "@nuxtjs/eslint-config": "^1.1.2",
     "@nuxtjs/eslint-module": "^1.1.0",
     "babel-eslint": "^10.0.3",
