--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
-    "name": "nuxtbootstrap",
-    "version": "1.0.0",
-    "description": "a nuxt.js bootstrap project",
-    "author": "Dan Ξ",
-    "private": true,
-    "scripts": {
-        "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-        "lint": "npm run lint:js",
-        "precommit": "npm run lint",
-        "dev": "nuxt",
-        "build": "nuxt build",
-        "start": "nuxt start",
-        "generate": "nuxt generate"
-    },
-    "dependencies": {
-        "@nuxtjs/auth": "^4.9.1",
-        "@nuxtjs/recaptcha": "^0.6.2",
-        "@nuxtjs/axios": "5.12.2",
-        "@nuxtjs/pwa": "3.2.2",
-        "@nuxtjs/toast": "3.3.1",
-        "nuxt": "2.14.7",
-        "nuxt-i18n": "^6.15.1",
-        "puppeteer": "^5.2.1",
-        "sha.js": "^2.4.11",
-        "timeago.js": "^4.0.2"
-    },
-    "devDependencies": {
-        "@nuxtjs/vuetify": "^1.11.2",
-        "@nuxtjs/eslint-config": "^4.0.0",
-        "@nuxtjs/eslint-module": "^3.0.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^7.11.0",
-        "eslint-config-standard": ">=15.0.0",
-        "eslint-plugin-import": ">=2.22.1",
-        "eslint-plugin-jest": ">=24.1.0",
-        "eslint-plugin-node": ">=11.1.0",
-        "eslint-plugin-nuxt": ">=1.0.0",
-        "eslint-plugin-promise": ">=4.2.1",
-        "eslint-plugin-standard": ">=4.0.2",
-        "eslint-plugin-vue": "^7.1.0",
-        "nodemon": "^2.0.6",
-        "stylus": "^0.54.8",
-        "stylus-loader": "^4.1.1",
-        "faker": "^4.1.0",
-        "jest": "^26.4.2",
-        "jest-puppeteer": "^4.4.0"
-    }
+  "name": "nuxtbootstrap",
+  "version": "1.0.0",
+  "description": "a nuxt.js bootstrap project",
+  "author": "Dan Ξ",
+  "private": true,
+  "scripts": {
+    "lint:eslint": "eslint --ext .js,.jsx,.html . --ignore-path .gitignore --fix",
+    "lint:fix": "eslint --fix ./",
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate"
+  },
+  "dependencies": {
+    "@google-cloud/pubsub": "^2.7.0",
+    "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/pwa": "^3.3.4",
+    "core-js": "^3.8.2",
+    "nuxt": "^2.14.12",
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/recaptcha": "^0.6.2",
+    "@nuxtjs/toast": "3.3.1",
+    "nuxt-i18n": "^6.15.1",
+    "sha.js": "^2.4.11",
+    "timeago.js": "^4.0.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-sql": "^1.1.1",
+    "@nuxtjs/vuetify": "^1.11.3",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
+    "@nuxtjs/eslint-config": "^4.0.0",
+    "@nuxtjs/eslint-module": "^3.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.11.0",
+    "eslint-config-standard": ">=15.0.0",
+    "eslint-plugin-import": ">=2.22.1",
+    "eslint-plugin-jest": ">=24.1.0",
+    "eslint-plugin-node": ">=11.1.0",
+    "eslint-plugin-nuxt": ">=1.0.0",
+    "eslint-plugin-promise": ">=4.2.1",
+    "eslint-plugin-standard": ">=4.0.2",
+    "eslint-plugin-vue": "^7.1.0",
+    "nodemon": "^2.0.6",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^4.1.1"
+  }
 }
